# NetGuard

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  deploy.sh
.github/workflows/: build.yml
config/: netguard.toml
crates/netguard-core/: Cargo.toml
crates/netguard-core/src/: config.rs  connection_log.rs  errors.rs  lib.rs  models.rs  port_probe.rs  rule_engine.rs
crates/netguard-daemon/: Cargo.toml
crates/netguard-daemon/src/: main.rs
crates/netguard-mitm/: Cargo.toml
crates/netguard-mitm/src/: addon.py  bridge.rs  bridge_stub.rs  controller.rs  lib.rs
crates/netguard-nfq/: Cargo.toml
crates/netguard-nfq/src/: dns.rs  http.rs  lib.rs  packet.rs  procmap.rs  queue.rs  resolver.rs  tls.rs
crates/netguard-web/: Cargo.toml
crates/netguard-web/src/: api.rs  lib.rs  server.rs  state.rs  ws.rs
crates/netguard-web/static/: app.js  index.html
docs/superpowers/plans/: 2026-04-16-multi-distro-packaging.md
docs/superpowers/specs/: 2026-04-16-multi-distro-packaging-design.md
frontend/: index.html  package.json  vite.config.ts
frontend/public/: style.css
frontend/src/: App.tsx
frontend/src/components/common/: Badge.tsx  ModalBackdrop.tsx
frontend/src/components/connections/: ConnectionsPage.tsx
frontend/src/components/dashboard/: DashboardPage.tsx  LiveStream.tsx  StatsGrid.tsx  TopApps.tsx
frontend/src/components/layout/: MitmToggle.tsx  Sidebar.tsx
frontend/src/components/logs/: LogsPage.tsx
frontend/src/components/modals/: PacketDetailModal.tsx
frontend/src/components/prompts/: PromptOverlay.tsx
frontend/src/components/rules/: RulesPage.tsx
frontend/src/hooks/: useApi.ts  useWebSocket.ts
frontend/src/pages/: LoginPage.tsx
frontend/src/stores/: authStore.ts  connectionStore.ts  promptStore.ts  ruleStore.ts  statsStore.ts  websocketStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: csv.ts  format.ts  hex.ts
packaging/: README.md  nfpm.yaml
packaging/scripts/: _action.sh  postinstall.sh  postremove.sh  preremove.sh
scripts/: install.sh  setup-nfqueue.sh
systemd/: netguard.service
