[workspace]
resolver = "2"
members = [
    "crates/netguard-core",
    "crates/netguard-nfq",
    "crates/netguard-web",
    "crates/netguard-daemon",
    "crates/netguard-mitm",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/dominikdrozd/NetGuard"
authors = ["Dominik Drozd <dominik@jchs.software>"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
