[package]
name = "netguard-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "netguard"
path = "src/main.rs"

[dependencies]
netguard-core = { path = "../netguard-core" }
netguard-nfq = { path = "../netguard-nfq" }
netguard-web = { path = "../netguard-web" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true }
getrandom = "0.3"
hex = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
tokio = { workspace = true, features = ["full", "signal"] }
