[package]
name = "netguard-mitm"
version = "0.1.0"
edition = "2021"

[dependencies]
netguard-core = { path = "../netguard-core" }

tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
