[package]
name = "netguard-nfq"
version = "0.1.0"
edition = "2021"

[dependencies]
netguard-core = { path = "../netguard-core" }
nfq = "0.2"
procfs = "0.18"

tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
