[package]
name = "netguard-nfq"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
netguard-core = { path = "../netguard-core" }
netguard-mitm = { path = "../netguard-mitm" }
nfq = "0.2"
procfs = "0.18"

tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
