[package]
name = "netguard-web"
version = "0.1.0"
edition = "2021"

[dependencies]
netguard-core = { path = "../netguard-core" }
axum = { version = "0.8", features = ["ws"] }
tokio = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "fs"] }
rust-embed = "8"
mime_guess = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures-util = "0.3"
subtle = "2"
